--- a/classmanipulation/index.html
+++ b/classmanipulation/index.html
@@ -3,12 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dark Theme</title>
+    <title>Pick Theme</title>
     <style>
-      body {
-        align-items: center;
-      }
-
       .button {
         background-color: black;
         color: white;
@@ -22,7 +18,7 @@
       }
       button.darktheme {
         background-color: white;
-        color: white;
+        color: black;
         border-radius: 20px;
         font-size: 25px;
         padding: 15px;
@@ -45,6 +41,10 @@
         .addEventListener("click", function () {
           document.body.classList.toggle("darktheme");
           document.body.classList.toggle("lighttheme");
+
+          let button = document.getElementById("theme-toggle");
+          button.classList.toggle("darktheme");
+          button.classList.toggle("button");
         });
     </script>
   </body>
